# rust-server-test

./: .gitignore
.github/workflows/: production.yml
server_test/: .env  Cargo.toml  Dockerfile  docker-compose.yml
server_test/migrations/: 20230924160220_employees_table.sql
server_test/src/: main.rs
