[package]
name = "server_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
sqlx-cli = "0.7.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0.180", features = ["derive"] }
dotenv = "0.15.0"

[[bin]]
name = "server_test"
path = "src/main.rs"
